# ComfyUI-Sapiens2

./: README.md  __init__.py  glb.py  nodes.py  pyproject.toml
example_workflows/: sapiens2_example_01.json  sapiens2_test.json
sapiens2/: backbone.py  heads.py  loader.py  model.py  preprocess.py
